docs/versioned_docs/version-4.0.0-beta.3/api/Renderer.mdx
import Translate, {translate} from '@docusaurus/Translate';



```ts
class Renderer
```
A component that manages [Panel](Panel) and its elements

<div className="container">
    <div className="row mb-2"><div className="col col--6"><strong>Properties</strong></div><div className="col col--6"><strong>Methods</strong></div></div>
    <div className="row"><div className="col col--6"><a href="#panels">panels</a><br/><a href="#panelCount">panelCount</a><br/><a href="#elementManipulator">elementManipulator</a><br/><a href="#align">align</a></div><div className="col col--6"><a href="#render">render</a><br/><a href="#init">init</a><br/><a href="#destroy">destroy</a><br/><a href="#getPanel">getPanel</a><br/><a href="#insert">insert</a><br/><a href="#remove">remove</a><br/><a href="#updatePanelSize">updatePanelSize</a></div></div>
  </div>

## Constructor
```ts
new Renderer(options, options.align, options.elementManipulator)
```
|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|options|object|yes|{}|An options object|
|options.align|[Constants.ALIGN](Constants:ALIGN) \| string \| number|yes||An [align](Flicking#align) value that will be applied to all panels|
|options.elementManipulator|[OffsetManipulator](OffsetManipulator)|yes||An instance of [OffsetManipulator](OffsetManipulator) that renderer will use|


## Properties

### panels {#panels}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

Array of panels

**Type**: Array&lt;[Panel](Panel)&gt;











**See**:
- [Panel](Panel)




### panelCount {#panelCount}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

Count of panels

**Type**: number
















### elementManipulator {#elementManipulator}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

An instance of the [OffsetManipulator](OffsetManipulator) that Renderer's using

**Type**: [OffsetManipulator](OffsetManipulator)
















### align {#align}

<div className="bulma-tags">




</div>

A [Panel](Panel)'s [align](Panel#align) value that applied to all panels

**Type**: [Constants.ALIGN](Constants:ALIGN) \| string \| number
















## Methods

### render {#render}

<div className="bulma-tags">




</div>

Render panel elements inside the camera element





**Returns**: this













### init {#init}

<div className="bulma-tags">




</div>

Initialize Renderer





**Returns**: this




|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|flicking|[Flicking](Flicking)|no||An instance of [Flicking](Flicking)|








### destroy {#destroy}

<div className="bulma-tags">




</div>

Destroy Renderer and return to initial state





**Returns**: void













### getPanel {#getPanel}

<div className="bulma-tags">




</div>

Return the [Panel](Panel) at the given index. `null` if it doesn't exists.





**Returns**: [Panel](Panel) \| null
- Panel at the given index



|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|index|number|no|||



**See**:
- [Panel](Panel)




### insert {#insert}

<div className="bulma-tags">




</div>

Insert new panels at given index
This will increase index of panels after by the number of panels added





**Returns**: Array&lt;[Panel](Panel)&gt;
- An array of prepended panels



|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|index|number|no||Index to insert new panels at|
|element|Flicking.ElementLike \| Array&lt;Flicking.ElementLike&gt;|no||A new HTMLElement, a outerHTML of element, or an array of both|








### remove {#remove}

<div className="bulma-tags">




</div>

Remove the panel at the given index
This will decrease index of panels after by the number of panels removed





**Returns**: [Panel](Panel)[]
- An array of removed panels



|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|index|number|no||Index of panel to remove|
|deleteCount|number|yes|1|Number of panels to remove from index|








### updatePanelSize {#updatePanelSize}

<div className="bulma-tags">




</div>

Update all panel sizes





**Returns**: this














